oscs: Move readme to the top level and add some missing details on setup

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -4,7 +4,7 @@
 		# this should be the directory where the static html files are found
 		root /home/greg/git/test/berghain/static;
 	}
-	location /game {
+	location /game/ {
 		rewrite ^/game/(.*)$ /$1 break;
 		# make sure this port matches the value of GAME_PORT in main.c
 		proxy_pass http://localhost:8124;
